--- a/floats.tex
+++ b/floats.tex
@@ -65,7 +65,7 @@
     \vspace{0.5em}
 
     \includegraphics[width=0.6\linewidth]{figures/pdf/future_model-crop.pdf} 
-    \caption{Device lifetime as a function of problem size. A \riptide based system smartly discarding uninteresting data achieves similar lifetime to a theoretical system with a 10TOPS/W processor. \riptide (Summary), which only transmits a summary of captured data, increases lifetime even more.}
+    \caption{Device lifetime as a function of problem size. A \riptide-based system smartly discarding uninteresting data achieves similar lifetime to a hypothetical system with a 10TOPS/W processor. \riptide (Summary), which only transmits a summary of captured data, increases lifetime even more.}
     \label{fig:future:model}
   \end{figure}
 }
