--- a/paper.tex
+++ b/paper.tex
@@ -59,7 +59,7 @@ headsepline, % Uncomment to get a line under the header
 %	THESIS INFORMATION
 %----------------------------------------------------------------------------------------
 
-\thesistitle{Programmable, Energy-minimal Computer Architectures} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
+\thesistitle{Programmable, Energy-minimal\linebreak Computer Architectures} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
 \degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
 \author{Graham \textsc{Gobieski}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
 \keywords{} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
@@ -94,7 +94,9 @@ headsepline, % Uncomment to get a line under the header
 
 \HRule \\[0.4cm] % Horizontal line
 {\LARGE \bfseries \ttitle\par}\vspace{0.4cm} % Thesis title
-\HRule \\[1cm] % Horizontal line
+\HRule \\[0.5cm] % Horizontal line
+
+\large{\bf CMU-CS-22-145}
  
 \begin{flushleft} 
 \large
@@ -110,7 +112,11 @@ Tony Nowatzki, External
 
 \end{flushleft}
 
-\vspace{1cm}
+\vspace{1em}
+
+\large{August 2022}
+
+\vspace{1em}
 
 \large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[1cm] % University requirement text
 \deptname \\
@@ -118,9 +124,15 @@ Tony Nowatzki, External
 \univname \\[0.3cm]
 5000 Forbes Avenue \\
 Pittsburgh, Pennsylvania 15213
-\\[0.8cm]
- 
-\large{July 2022}
+\\[0.5cm]
+
+\vfill
+\large{\textcopyright 2022 Graham Gobieski. All rights reserved.}
+
+\vspace{1em}
+
+This research was sponsored by an Apple PhD Fellowship, the National Science Foundation under award numbers CNS-1526342 and CCF-1815882, and the U.S. Army under award number W911NF1820218.  The views and conclusions contained in this document are those of the author and should not be interpreted as representing the official policies, either expressed or implied, of any sponsoring institution, the U.S. government or any other entity.
+
 \vfill
 \end{center}
 \end{titlepage}
