--- a/riptide/6_arch.tex
+++ b/riptide/6_arch.tex
@@ -1,7 +1,7 @@
 \section{RipTide Microarchitecture}
 \label{sec:arch}
 
-\riptide is an energy-minimal coarse-grained reconfigurable array (\autoref{fig:arch:block}).
+\riptide is an energy-minimal coarse-grained reconfigurable array (\autoref{fig:riptide:arch:block}).
 % 
 The 6$\times$6 fabric contains
 heterogeneous PEs connected via a bufferless, 2D-torus NoC.
@@ -27,7 +27,7 @@ operation timing.
 \subsection{Processing elements}
 \riptide's PEs perform all arithmetic and memory operations in the fabric.
 %
-\autoref{fig:arch:pe} shows the microarchitecture of a PE.
+\autoref{fig:riptide:arch:pe} shows the microarchitecture of a PE.
 % 
 The PE includes a functional unit (FU) and the \textmu core.
 % 
