--- a/riptide/A_implications.tex
+++ b/riptide/A_implications.tex
@@ -1,7 +1,7 @@
 \section{Conclusion: Implications for General-Purpose Architecture and Dark Silicon}
 \label{sec:implications}
 
-\autoref{fig:eval:energy} and \autoref{fig:eval:perf} compare the energy and performance for {\tt dmm} on \riptide v.\ an equivalent ASIC.
+\autoref{fig:riptide:eval:energy} and \autoref{fig:riptide:eval:perf} compare the energy and performance for {\tt dmm} on \riptide v.\ an equivalent ASIC.
 %
 \riptide does not compromise much on energy or performance --- coming within 46\% and 3\%, respectively --- but it is not a free lunch.
 %
