--- a/sonic/0_intro.tex
+++ b/sonic/0_intro.tex
@@ -45,13 +45,13 @@ mW~\cite{han:isca16:eie,chen:asplos14:diannao,du:isca15:shidiannao,chen:isca16:e
 %
 In stark contrast to these high-performance systems, energy-harvesting devices
 use simple microcontrollers (MCUs) built for extreme low-power operation.
-These MCUs systems run at low frequency (1--16 MHz) and have very small
-memories (tens or hundreds of kilobytes).
-%
-Their simple architectures limit them to executing a few 
-million operations per second, while consuming only 3--5mW%
----a power envelope two orders of magnitude lower than recent DNN accelerators.
-
+% These MCUs systems run at low frequency (1--16 MHz) and have very small
+% memories (tens or hundreds of kilobytes).
+% %
+% Their simple architectures limit them to executing a few 
+% million operations per second, while consuming only 3--5mW%
+% ---a power envelope two orders of magnitude lower than recent DNN accelerators.
+% 
 DNN inference on these devices is unexplored, and several challenges
 must be overcome to enable emerging IoT applications on
 energy-harvesting systems built from commodity components.
